src/objects/KCSArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Tab</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article template designed according to the best practices of Knowledge-Centered Support.</description>
    <fields>
        <fullName>Cause__c</fullName>
        <description>Explains the root cause of the issue.</description>
        <label>Cause</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Provides details on the environment where the customer is experiencing the issue.</description>
        <label>Environment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Describes the issue the customer is encountering.</description>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <description>Describes the steps taken to resolve this issue.</description>
        <label>Resolution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>KCS Article</label>
    <pluralLabel>KCSArticle</pluralLabel>
</CustomObject>